# LoFi-3D-Kit

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  f.txt
LoFiGfx/: CMakeLists.txt
LoFiGfx/Include/: LoFiGfx.h  LoFiGfxDefines.h
LoFiGfx/Source/: Context.cpp  Context.h  FrameGraph.cpp  FrameGraph.h  GfxContext.cpp  GfxContext.h  Helper.cpp  Helper.h  LoFiGfx.cpp  Marcos.cpp  Marcos.h  Message.cpp  Message.h  PfxContext.cpp  PfxContext.h  PhysicalDevice.cpp  PhysicalDevice.h  Program.cpp  Program.h  RenderNode.cpp  RenderNode.h  Texture.cpp  Texture.h  VmaLoader.cpp  VmaLoader.h  Window.cpp  Window.h
LoFiGfx/Source/Components/: Buffer.cpp  Buffer.h  ComputeKernel.cpp  ComputeKernel.h  ComputeKernelInstance.cpp  ComputeKernelInstance.h  Defines.h  FrameResource.cpp  FrameResource.h  GraphicKernel.cpp  GraphicKernel.h  GrapicsKernelInstance.cpp  GrapicsKernelInstance.h  Kernel.cpp  Kernel.h  KernelInstance.cpp  KernelInstance.h  Program.cpp  Program.h  ResourcePushConstant.cpp  ResourcePushConstant.h  Swapchain.cpp  Swapchain.h  Texture.cpp  Texture.h  Window.cpp  Window.h
LoFiGfx/Source/GfxComponents/: Buffer.cpp  Buffer.h  Buffer3F.cpp  Buffer3F.h  Defines.h  FrameResource.cpp  FrameResource.h  Kernel.cpp  Kernel.h  KernelInstance.cpp  KernelInstance.h  Program.cpp  Program.h  PushConstantBuffer.cpp  PushConstantBuffer.h  ResourcePushConstant.cpp  ResourcePushConstant.h  Swapchain.cpp  Swapchain.h  Texture.cpp  Texture.h  Window.cpp  Window.h
LoFiGfx/Source/PtxComponents/: RenderNode.cpp  RenderNode.h
LoFiGfx/Third/dxc/: dxcapi.h
LoFiGfx/Third/earcut/: earcut.hpp
LoFiGfx/Third/msdf-atlas-gen/: AtlasGenerator.h  AtlasStorage.h  FontGeometry.h  GlyphGeometry.h  ImmediateAtlasGenerator.hpp  Padding.h  artery-font-export.h  bitmap-blit.h  glyph-generators.h  image-encode.h  image-save.h  image-save.hpp  json-export.h  msdf-atlas-gen.h  shadron-preview-generator.h
LoFiGfx/Third/msdfgen/: msdfgen-config.h
LoFiGfx/Third/spirv-cross/: spirv_hlsl.cpp
LoFiGfx/Third/volk/: volk.c  volk.h
LoFiGfx/ThirdBin/: Clipper2.lib  Clipper2Z.lib  GenericCodeGen.lib  OSDependent.lib  SPIRV.lib  dxcompiler.lib  freetype.lib  glslang-default-resource-limits.lib  glslang.lib  mimalloc-redirect.lib  mimalloc-secure.lib  mimalloc-static-secure.lib  msdf-atlas-gen.lib  msdfgen-core.lib  msdfgen-ext.lib
Test/: CMakeLists.txt  main.cpp
