cmake_minimum_required(VERSION 3.28)
project(LoFi-Kit)

file(MAKE_DIRECTORY ${CMAKE_SOURCE_DIR}/Binary/${CMAKE_BUILD_TYPE})

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/Binary/${CMAKE_BUILD_TYPE})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/Binary/${CMAKE_BUILD_TYPE})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/Binary/${CMAKE_BUILD_TYPE})
set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)

set(CMAKE_CXX_STANDARD 23)

set(SDL_STATIC ON)
set(SDL_SHARED OFF)
set(SDL_RENDER_D3D OFF)
set(SDL_OPENGL OFF)
set(SDL_OPENGLES OFF)
set(SDL_DUMMYCAMERA OFF)
set(SDL_DUMMYAUDIO OFF)
set(SDL_DISKAUDIO OFF)
set(SDL_DUMMYVIDEO OFF)
set(SDL_DIRECTX OFF)
set(SDL_LIBC OFF)
set(SDL_WASAPI OFF)
add_subdirectory(Third/SDL)
add_subdirectory(Third/entt)


add_subdirectory(LoFiGfx)
add_subdirectory(Test)